Clean some codes and change in design

--- a/app/src/main/res/layout/activity_restock.xml
+++ b/app/src/main/res/layout/activity_restock.xml
@@ -9,6 +9,7 @@
         android:id="@+id/edit_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:inputType="text"
         android:hint="@string/new_quantity"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
