--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,25 +9,37 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="292dp"
-        android:layout_height="38dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:gravity="center"
         android:hint="@string/product_type"
-        app:layout_constraintBottom_toTopOf="@+id/table"
+        app:layout_constraintBottom_toBottomOf="@+id/manger"
         app:layout_constraintEnd_toStartOf="@+id/manger"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+
+        />
+
     <Button
         android:id="@+id/manger"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@color/DarkSeaGreen"
         android:text="@string/manger"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/total"
+        app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1" />
+
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.23" />
+
 
     <TableLayout
         android:id="@+id/table"
@@ -35,7 +47,9 @@
         android:layout_height="wrap_content"
         android:weightSum="4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView">
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/guideline3"
+        >
 
         <TableRow
             android:layout_width="wrap_content"
@@ -168,18 +182,24 @@
         </TableRow>
     </TableLayout>
 
-
-
-
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.63" />
     <TextView
         android:id="@+id/total"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:text="@string/total"
         android:textAlignment="center"
+        app:layout_constraintStart_toStartOf="@id/manger"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/manger" />
+        app:layout_constraintTop_toBottomOf="@id/manger"
+        app:layout_constraintBottom_toBottomOf="@+id/guideline"/>
+
+
     <Button
         android:id="@+id/buy"
         android:layout_width="wrap_content"
@@ -187,167 +207,32 @@
         android:backgroundTint="@color/DarkSeaGreen"
         android:text="@string/buy"
         android:textColor="@color/black"
+        app:layout_constraintBottom_toBottomOf="@id/table"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/table"
-        app:layout_constraintTop_toBottomOf="@+id/total"
-        app:layout_constraintBottom_toBottomOf="@id/table"
-        />
+        app:layout_constraintTop_toBottomOf="@id/total" />
 
-<!--    <Button-->
-<!--        android:id="@+id/one"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:backgroundTint="@color/DarkSeaGreen"-->
-<!--        android:text="@string/one"-->
-<!--        android:textColor="@color/black"-->
-
-<!--        app:layout_constraintHorizontal_chainStyle="spread"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/two"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:backgroundTint="@color/DarkSeaGreen"-->
-<!--        android:text="@string/two"-->
-<!--        android:textColor="@color/black"-->
-
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
-<!--        app:layout_constraintStart_toEndOf="@id/one"-->
-
-
-<!--    />-->
-<!--    <Button-->
-<!--        android:id="@+id/three"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:backgroundTint="@color/DarkSeaGreen"-->
-<!--        android:text="@string/three"-->
-<!--        android:textColor="@color/black"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/textView"-->
-<!--        app:layout_constraintStart_toEndOf="@id/two"-->
-<!--        app:layout_constraintHorizontal_chainStyle="spread"-->
-
-<!--        />-->
-
-
-<!--    <Button-->
-<!--        android:id="@+id/four"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:backgroundTint="@color/DarkSeaGreen"-->
-<!--        android:text="@string/four"-->
-<!--        android:textColor="@color/black"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/one"-->
-<!--        />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/five"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:backgroundTint="@color/DarkSeaGreen"-->
-<!--        android:text="@string/five"-->
-<!--        android:textColor="@color/black"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/two"-->
-<!--        app:layout_constraintStart_toEndOf="@id/four"-->
-
-<!--        />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/six"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:backgroundTint="@color/DarkSeaGreen"-->
-<!--        android:text="@string/six"-->
-<!--        android:textColor="@color/black"-->
-
-<!--        app:layout_constraintTop_toBottomOf="@id/three"-->
-<!--        app:layout_constraintStart_toEndOf="@id/five"-->
-<!--         />-->
-
-<!--    <Button-->
-<!--        android:id="@+id/seven"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:backgroundTint="@color/DarkSeaGreen"-->
-<!--        android:text="@string/seven"-->
-<!--        android:textColor="@color/black"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/four"-->
-<!--        />-->
-
-
-<!--    <Button-->
-<!--        android:id="@+id/eight"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:backgroundTint="@color/DarkSeaGreen"-->
-<!--        android:text="@string/eight"-->
-<!--        android:textColor="@color/black"-->
-
-<!--        app:layout_constraintTop_toBottomOf="@id/five"-->
-<!--        app:layout_constraintStart_toEndOf="@id/seven"-->
-<!--/>-->
-
-<!--    <Button-->
-<!--        android:id="@+id/nine"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:backgroundTint="@color/DarkSeaGreen"-->
-<!--        android:text="@string/nine"-->
-<!--        android:textColor="@color/black"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/six"-->
-<!--        app:layout_constraintStart_toEndOf="@id/eight"-->
-<!--      />-->
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/linearLayout"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="0dp"-->
-<!--        android:orientation="horizontal"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/seven">-->
-
-<!--        <Button-->
-<!--            android:id="@+id/clear"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:backgroundTint="@color/DarkSeaGreen"-->
-<!--            android:text="@string/clear"-->
-<!--            android:textColor="@color/black"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/seven"-->
-<!--            />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/zero"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:backgroundTint="@color/DarkSeaGreen"-->
-<!--            android:text="@string/zero"-->
-<!--            android:textColor="@color/black"-->
-<!--            app:layout_constraintStart_toEndOf="@id/clear"-->
-<!--            app:layout_constraintTop_toBottomOf="@id/eight"-->
-
-<!--            />-->
-<!--    </LinearLayout>-->
 
     <TextView
         android:id="@+id/quantity"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:hint="@string/quantity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/table" />
+        app:layout_constraintTop_toBottomOf="@+id/guideline3"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"/>
+
+
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
+        android:id="@+id/guideline2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.3" />
+        app:layout_constraintGuide_percent="0.7" />
+
     <ListView
         android:id="@+id/product_list"
         android:layout_width="0dp"
@@ -355,9 +240,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/quantity"
-         />
-
+        app:layout_constraintTop_toBottomOf="@+id/guideline2" />
 
 
 
