--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/relativeLayout"
+
     >
 
     <TextView
@@ -26,10 +26,9 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/DarkSeaGreen"
         android:text="@string/manger"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/guideline"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@id/linear"
         app:layout_constraintEnd_toEndOf="parent"
-
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.1" />
 
@@ -39,7 +38,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.17" />
+        app:layout_constraintGuide_percent="0.14" />
 
 
     <TableLayout
@@ -47,10 +46,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:weightSum="4"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/guideline"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
-        >
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guideline">
 
         <TableRow
             android:layout_width="wrap_content"
@@ -188,34 +186,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.65" />
+        app:layout_constraintGuide_percent="0.68" />
 
-
-    <TextView
-        android:id="@+id/total"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/total"
-        app:layout_constraintTop_toTopOf="@id/guideline"
-        app:layout_constraintBottom_toTopOf="@+id/buy"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/manger"
-       />
-
-    <Button
-        android:id="@+id/buy"
+    <LinearLayout
+        android:id="@+id/linear"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:backgroundTint="@color/DarkSeaGreen"
-        android:text="@string/buy"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@id/table"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="@+id/table"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/table"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toBottomOf="@id/total"
-         />
+        android:weightSum="3"
+        app:layout_constraintBottom_toBottomOf="@id/table"
 
+        >
+
+        <TextView
+            android:id="@+id/total"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="bottom"
+            android:layout_margin="@dimen/total_padding"
+            android:layout_weight="0.5"
+            android:text="@string/total"
+            android:textColor="@color/black"
+
+            />
+
+            <Button
+                android:id="@+id/buy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+            android:backgroundTint="@color/DarkSeaGreen"
+            android:text="@string/buy"
+            android:textColor="@color/black"
+             android:layout_weight="2.5"
+            />
+        </LinearLayout>
 
     <TextView
         android:id="@+id/quantity"
@@ -234,7 +242,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.73" />
+        app:layout_constraintGuide_percent="0.76" />
 
     <ListView
         android:id="@+id/product_list"
