--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -209,7 +209,7 @@
             android:gravity="bottom"
             android:layout_margin="@dimen/total_padding"
             android:layout_weight="0.5"
-            android:text="@string/total"
+            android:hint="@string/total"
             android:textColor="@color/black"
 
             />
