--- a/app/src/main/res/layout/activity_manger.xml
+++ b/app/src/main/res/layout/activity_manger.xml
@@ -1,27 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
-    android:orientation="vertical"
-    tools:context=".MangerActivity">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
 
-    <Button
-        android:id="@+id/history"
+
+    >
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/dark_light_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/DarkSeaGreen"
-        android:text="@string/history"
-        android:textColor="@color/white" />
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayoutManager"
 
-    <Button
-        android:id="@+id/restock"
+
+        />
+
+    <LinearLayout
+        android:id="@+id/linearLayoutManager"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/DarkSeaGreen"
-        android:text="@string/restock"
-        android:textColor="@color/white" />
+        android:layout_gravity="center"
+        android:gravity="center"
 
-</LinearLayout >
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+
+        app:layout_constraintTop_toBottomOf="@+id/dark_light_switch">
+
+
+        <Button
+            android:id="@+id/history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/DarkSeaGreen"
+            android:text="@string/history"
+            android:textColor="@color/white" />
+
+        <Button
+            android:id="@+id/restock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/DarkSeaGreen"
+            android:text="@string/restock"
+            android:textColor="@color/white" />
+
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
