--- a/app/src/main/res/layout/activity_manger.xml
+++ b/app/src/main/res/layout/activity_manger.xml
@@ -4,21 +4,26 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-
     >
+
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/dark_light_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="@dimen/switch_padding"
+        android:gravity="center"
         android:textColor="@color/black"
-        android:textSize="20sp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayoutManager"
-
-
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         />
+    <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/guideline5"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    app:layout_constraintGuide_percent="0.14" />
 
     <LinearLayout
         android:id="@+id/linearLayoutManager"
@@ -27,12 +32,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-
         app:layout_constraintTop_toBottomOf="@+id/dark_light_switch">
 
 
