--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,41 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="White">#FFFFFF</color>
-    <color name="Ivory">#FFFFF0</color>
-    <color name="LightYellow">#FFFFE0</color>
+    <color name="white">#FFFFFF</color>
     <color name="Yellow">#FFFF00</color>
     <color name="Snow">#FFFAFA</color>
-    <color name="FloralWhite">#FFFAF0</color>
-    <color name="LemonChiffon">#FFFACD</color>
-    <color name="Seashell">#FFF5EE</color>
-    <color name="LavenderBlush">#FFF0F5</color>
-    <color name="PapayaWhip">#FFEFD5</color>
-    <color name="BlanchedAlmond">#FFEBCD</color>
-    <color name="MistyRose">#FFE4E1</color>
-    <color name="Bisque">#FFE4C4</color>
-    <color name="Moccasin">#FFE4B5</color>
-    <color name="NavajoWhite">#FFDEAD</color>
-    <color name="PeachPuff">#FFDAB9</color>
-    <color name="Gold">#FFD700</color>
-    <color name="Pink">#FFC0CB</color>
-    <color name="LightPink">#FFB6C1</color>
-    <color name="Orange">#FFA500</color>
-    <color name="LightSalmon">#FFA07A</color>
-    <color name="DarkOrange">#FF8C00</color>
-    <color name="Coral">#FF7F50</color>
-    <color name="HotPink">#FF69B4</color>
-    <color name="Tomato">#FF6347</color>
-    <color name="OrangeRed">#FF4500</color>
-    <color name="DeepPink">#FF1493</color>
-    <color name="Fuchsia">#FF00FF</color>
-    <color name="Magenta">#FF00FF</color>
-    <color name="Red">#FF0000</color>
-    <color name="OldLace">#FDF5E6</color>
-    <color name="LightGoldenrodYellow">#FAFAD2</color>
-    <color name="Linen">#FAF0E6</color>
-    <color name="AntiqueWhite">#FAEBD7</color>
     <color name="Salmon">#FA8072</color>
     <color name="GhostWhite">#F8F8FF</color>
     <color name="MintCream">#F5FFFA</color>
@@ -54,16 +22,6 @@
     <color name="Lavender">#E6E6FA</color>
     <color name="LightCyan">#E0FFFF</color>
     <color name="BurlyWood">#DEB887</color>
-    <color name="Plum">#DDA0DD</color>
-    <color name="Crimson">#DC143C</color>
-    <color name="PaleVioletRed">#DB7093</color>
-    <color name="Goldenrod">#DAA520</color>
-    <color name="Orchid">#DA70D6</color>
-    <color name="Thistle">#D8BFD8</color>
-    <color name="LightGrey">#D3D3D3</color>
-    <color name="Tan">#D2B48C</color>
-    <color name="Chocolate">#D2691E</color>
-    <color name="Peru">#CD853F</color>
     <color name="IndianRed">#CD5C5C</color>
     <color name="MediumVioletRed">#C71585</color>
     <color name="Silver">#C0C0C0</color>
@@ -86,7 +44,7 @@
     <color name="DarkViolet">#9400D3</color>
     <color name="MediumPurple">#9370DB</color>
     <color name="LightGreen">#90EE90</color>
-    <color name="DarkSeaGreen">#7BD5B1</color>
+    <color name="DarkSeaGreen">#00dec5</color>
     <color name="SaddleBrown">#8B4513</color>
     <color name="DarkMagenta">#8B008B</color>
     <color name="DarkRed">#8B0000</color>
