--- a/app/src/main/res/values/dimentions.xml
+++ b/app/src/main/res/values/dimentions.xml
@@ -1,4 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="total_padding">10sp</dimen>
+    <dimen name="switch_padding">16sp</dimen>
+    <dimen name="text_size">30sp</dimen>
+    <dimen name="switch_text">30sp</dimen>
 </resources>
