--- a/app/src/main/res/layout/history_list_row.xml
+++ b/app/src/main/res/layout/history_list_row.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="@dimen/total_padding"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
@@ -9,6 +10,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/history_row_name"
+
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
